# syDNN

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  temp.txt
include/: clrt.hpp  conv2d.hpp  conv2d_3x3.hpp  conv2d_impl.hpp  conv2d_naive.hpp  implementation.hpp  size.hpp  sydnn.hpp  tensor.hpp  utilities.hpp
include/conv2d/: conv2d_3x3.hpp  conv2d_bfyx_os_iyx_osv16.hpp  conv2d_impl.hpp  conv2d_naive.hpp
include/sylib/: size.hpp  sylibdef.hpp  syop.hpp  tensor.hpp
include/sylib/dnn/: conv2d.hpp  dense.hpp
opencl_kernels/: conv2d_bfyx_os_iyx_osv16.cl  conv2d_naive.cl  conv_2d_naive.cl  dense_naive.cl
opencl_kernels/include/: activation_functions.cl  common.cl  data_types.cl  dpas.cl  fetch.cl  gemm_common.cl  include_all.cl  reshape_dims.cl  sub_group.cl  vec_typedefs.cl
sample/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt  conv2d.cpp  syop.cpp
source/dnn/: conv2d.cpp  dense.cpp
source/include/: implementation.hpp  size.hpp  utilities.hpp
source/include/conv2d/: conv2d_bfyx_os_iyx_osv16.hpp  conv2d_impl.hpp  conv2d_naive.hpp
source/include/dnn/conv2d/: conv2d_bfyx_os_iyx_osv16.hpp  conv2d_impl.hpp  conv2d_naive.hpp
source/include/dnn/dense/: dense_impl.hpp  dense_naive.hpp
tests/: CMakeLists.txt  CMakeLists.txt.in  conv2d_test.cpp  main.cpp  size_test.cpp  tensor_test.cpp
tests/common/: tensor_ref.hpp  test_common.cpp  test_common.hpp
